--- a/libs/front/ui/day-card-dialog/src/lib/day-card-dialog/day-card-dialog.component.html
+++ b/libs/front/ui/day-card-dialog/src/lib/day-card-dialog/day-card-dialog.component.html
@@ -13,9 +13,8 @@
 @if (shownWidget) {
   <div class="widget-container">
     @let component = shownWidget.component;
-    @let token = shownWidget.token;
     @let settingsComponent = shownWidget.settingsComponent;
-    @let injector = createInjector(token);
+    @let injector = $widgetInjector();
 
     <lib-dynamic-host [component]="component" [injector]="injector"></lib-dynamic-host>
 
