--- a/libs/front/ui/timetracker-widget/src/lib/timetracker-widget/timetracker-settings-widget/timetracker-settings-widget.component.html
+++ b/libs/front/ui/timetracker-widget/src/lib/timetracker-widget/timetracker-settings-widget/timetracker-settings-widget.component.html
@@ -1,3 +1,5 @@
+@let keys = $keys();
+
 <form [formGroup]="form" class="form">
   @for (key of keys; track $index) {
     @let controlInfo = getControlInfo(key);
