--- a/libs/front/ui/calendar/src/lib/day/day.component.less
+++ b/libs/front/ui/calendar/src/lib/day/day.component.less
@@ -49,6 +49,9 @@
 .top-left {
   grid-column: 1/1;
   grid-row: 1/1;
+
+  align-items: flex-start;
+  justify-content: flex-start;
 }
 
 .top-middle {
@@ -59,6 +62,10 @@
 .top-right {
   grid-column: 3/3;
   grid-row: 1/1;
+
+  align-items: flex-start;
+  justify-content: flex-end;
+  padding-right: 1rem;
 }
 
 .middle-left {
