--- a/libs/front/ui/waketime-widget/src/lib/waketime-widget/waketime-widget.component.html
+++ b/libs/front/ui/waketime-widget/src/lib/waketime-widget/waketime-widget.component.html
@@ -1,11 +1,9 @@
 @let waketime = $waketime();
 
-<tui-icon
-    icon="@tui.sunrise"
-    [class]="$size()"
-    [style.color]="'var(--tui-background-accent-1)'"
-/>
+<tui-icon icon="@tui.sunrise" [class]="$size()" [style.color]="'var(--tui-background-accent-1)'" />
 
-<time [attr.datetime]="waketime">
+@if (waketime) {
+  <time [attr.datetime]="waketime">
     {{ waketime }}
-</time>
+  </time>
+}
