feat(time-pipe): add time pipe implementation and related configurations refactor(waketime-widget): update waketime field naming and improve component structure refactor(day-card-dialog): remove unused imports and clean up component imports

--- a/libs/front/ui/waketime-widget/src/lib/waketime-widget/waketime-widget.component.html
+++ b/libs/front/ui/waketime-widget/src/lib/waketime-widget/waketime-widget.component.html
@@ -1,9 +1,11 @@
 @let waketime = $waketime();
 
-<tui-icon icon="@tui.sunrise" [class]="$size()" [style.color]="'var(--tui-background-accent-1)'" />
+<div [class]="`container ${$size()}`">
+<tui-icon class="icon" icon="@tui.sunrise" [style.color]="$color()" />
 
 @if (waketime) {
-  <time [attr.datetime]="waketime">
-    {{ waketime }}
+  <time class="time" [attr.datetime]="waketime">
+    {{ waketime | time }}
   </time>
 }
+</div>
