--- a/libs/front/ui/calendar/src/lib/day/day.component.less
+++ b/libs/front/ui/calendar/src/lib/day/day.component.less
@@ -86,6 +86,8 @@
 .bottom-left {
   grid-column: 1/1;
   grid-row: 3/3;
+  align-items: flex-end;
+  justify-content: flex-start;
 }
 
 .bottom-middle {
