refactor(todos-widget): simplify data structure and enhance computed properties for better clarity

--- a/libs/front/ui/todos-widget/src/lib/todos-widget/todos-widget.component.html
+++ b/libs/front/ui/todos-widget/src/lib/todos-widget/todos-widget.component.html
@@ -3,8 +3,10 @@
 @let totalRange = $totalRange();
 
 <div [class]="`container ${$size()}`">
-  <span> {{ totalCount }} / {{ plannedCount }} </span>
+  <span class="count"> {{ totalCount }} / {{ plannedCount }} </span>
+  <div class="dots">
   @for (total of totalRange; track $index) {
     <tui-icon class="icon" icon="@tui.dot" [style.color]="$color()" />
   }
+  </div>
 </div>
