refactor: clean up code formatting and improve readability across multiple components
- Updated Jest configuration files to ensure consistent coverage directory paths.
- Refactored LifestyleWidgetDataService to enhance parameter handling with HttpParams.
- Improved HTML templates in Calendar and Day components for better formatting.
- Streamlined LESS styles in Calendar and Todos components for consistency.
- Enhanced TypeScript files by removing unnecessary line breaks and improving import statements.
- Updated widget input interfaces and settings components for better clarity and structure.
- Refactored widget registry to improve organization and readability.
- Updated package.json to include libs in prettier formatting command.
- Adjusted tsconfig.base.json to ensure proper path mappings for todos-widget.

--- a/libs/front/ui/calendar/src/lib/day/day.component.html
+++ b/libs/front/ui/calendar/src/lib/day/day.component.html
@@ -10,7 +10,6 @@
 @let bottomRightWidget = slotWidgetMap[Slot.BottomRight];
 @let dayData = $dayData();
 
-
 <div class="day">
   @if (day) {
     <!-- Верхние слоты -->
@@ -41,10 +40,7 @@
     </div>
     <div class="slot middle-right">
       @if (middleRightWidget && dayData) {
-        <lifestyle-day-slot
-          [dayData]="dayData"
-          [widget]="middleRightWidget"
-        ></lifestyle-day-slot>
+        <lifestyle-day-slot [dayData]="dayData" [widget]="middleRightWidget"></lifestyle-day-slot>
       }
     </div>
 
@@ -56,18 +52,12 @@
     </div>
     <div class="slot bottom-middle">
       @if (bottomMiddleWidget && dayData) {
-        <lifestyle-day-slot
-          [dayData]="dayData"
-          [widget]="bottomMiddleWidget"
-        ></lifestyle-day-slot>
+        <lifestyle-day-slot [dayData]="dayData" [widget]="bottomMiddleWidget"></lifestyle-day-slot>
       }
     </div>
     <div class="slot bottom-right">
       @if (bottomRightWidget && dayData) {
-        <lifestyle-day-slot
-          [dayData]="dayData"
-          [widget]="bottomRightWidget"
-        ></lifestyle-day-slot>
+        <lifestyle-day-slot [dayData]="dayData" [widget]="bottomRightWidget"></lifestyle-day-slot>
       }
     </div>
   }
