--- a/apps/front/src/app/auth/login/login.component.html
+++ b/apps/front/src/app/auth/login/login.component.html
@@ -1,33 +1,41 @@
-<form [formGroup]="loginForm" class="form">
-  <p>
-    <tui-input
-      [formControlName]="LoginField.Email"
-      tuiTextfieldSize="l"
-      [tuiTextfieldCleaner]="true"
-    >
-      Type an email
-      <input autocomplete="email" tuiTextfieldLegacy type="email" />
-    </tui-input>
+<form [formGroup]="loginForm" class="form" (keydown.enter)="login()">
+  <div>
+    <tui-textfield>
+      <label for="email-input" tuiLabel>Type an email</label>
+      <input
+        id="email-input"
+        placeholder="Your email"
+        tuiTextfield
+        [formControlName]="LoginField.Email"
+        tuiTextfieldSize="l"
+        [tuiTextfieldCleaner]="true"
+        type="email"
+      />
+    </tui-textfield>
     <tui-error [formControlName]="LoginField.Email" [error]="[] | tuiFieldError | async" />
-  </p>
+  </div>
 
-  <p>
-    <tui-input
-      [formControlName]="LoginField.Password"
-      tuiTextfieldSize="l"
-      [tuiTextfieldCleaner]="true"
-    >
-      Type a password
-      <input autocomplete="new-password" tuiTextfieldLegacy type="password" />
-    </tui-input>
+  <div>
+    <tui-textfield>
+      <label for="password-input" tuiLabel>Type a password</label>
+      <input
+        id="password-input"
+        placeholder="7+ characters"
+        tuiTextfield
+        [formControlName]="LoginField.Password"
+        tuiTextfieldSize="l"
+        [tuiTextfieldCleaner]="true"
+        type="password"
+      />
+    </tui-textfield>
     <tui-error [formControlName]="LoginField.Password" [error]="[] | tuiFieldError | async" />
-  </p>
+  </div>
 
   <button
     class="button"
     size="l"
     tuiButton
-    type="button"
+    type="submit"
     [disabled]="loginForm.invalid || shouldShowLoading()"
     [loading]="shouldShowLoading()"
     (click)="login()"
