--- a/apps/front/src/app/auth/login/login.component.less
+++ b/apps/front/src/app/auth/login/login.component.less
@@ -2,11 +2,12 @@
   display: flex;
   flex-direction: column;
   width: 80%;
+  gap: 1rem;
   max-width: 400px;
   margin: 2rem auto;
 }
 
 .button {
-  margin-top: 1.5rem;
+  margin-top: 1rem;
   margin-left: auto;
 }
