--- a/apps/front/src/app/auth/sign-up/sign-up.component.less
+++ b/apps/front/src/app/auth/sign-up/sign-up.component.less
@@ -1,12 +1,13 @@
 .form {
   display: flex;
   flex-direction: column;
+  gap: 1rem;
   width: 80%;
   max-width: 400px;
   margin: 2rem auto;
 }
 
 .button {
-  margin-top: 1.5rem;
+  margin-top: 1rem;
   margin-left: auto;
 }
