refactor: add explicit return types and access modifiers across multiple components and services

--- a/libs/front/ui/timetracker-widget/src/lib/timetracker-widget/timetracker-settings-widget/timetracker-settings-widget.component.html
+++ b/libs/front/ui/timetracker-widget/src/lib/timetracker-widget/timetracker-settings-widget/timetracker-settings-widget.component.html
@@ -3,7 +3,7 @@
 <form [formGroup]="form" class="form">
   @for (key of keys; track $index) {
     @let controlInfo = getControlInfo(key);
-    <time-seconds-control
+    <lifestyle-dashboard-time-seconds-control
       [formControl]="controlInfo.control"
       [label]="controlInfo.title"
       [id]="'time-' + $index"
