--- a/apps/front/src/app/auth/login/login.component.html
+++ b/apps/front/src/app/auth/login/login.component.html
@@ -12,7 +12,10 @@
         type="email"
       />
     </tui-textfield>
-    <tui-error [formControlName]="LoginField.Email" [error]="[] | tuiFieldError | async" />
+    <tui-error
+      [formControlName]="LoginField.Email"
+      [error]="[] | tuiFieldError | async"
+    />
   </div>
 
   <div>
@@ -28,7 +31,10 @@
         type="password"
       />
     </tui-textfield>
-    <tui-error [formControlName]="LoginField.Password" [error]="[] | tuiFieldError | async" />
+    <tui-error
+      [formControlName]="LoginField.Password"
+      [error]="[] | tuiFieldError | async"
+    />
   </div>
 
   <button
