--- a/libs/front/ui/calendar/src/lib/day/day-slot/day-slot.component.html
+++ b/libs/front/ui/calendar/src/lib/day/day-slot/day-slot.component.html
@@ -1,5 +1,8 @@
 @let component = $widget()?.component;
 
 @if (component) {
-  <lib-dynamic-host [component]="component" [injector]="$widgetInjector()"></lib-dynamic-host>
+  <lib-dynamic-host
+    [component]="component"
+    [injector]="$widgetInjector()"
+  ></lib-dynamic-host>
 }
