--- a/libs/front/ui/waketime-widget/src/lib/waketime-widget/waketime-settings-widget/waketime-settings-widget.component.html
+++ b/libs/front/ui/waketime-widget/src/lib/waketime-widget/waketime-settings-widget/waketime-settings-widget.component.html
@@ -1,6 +1,10 @@
 <div [formGroup]="form">
   <tui-textfield>
     <label for="wake-time-input" tuiLabel> Waketime </label>
-    <input id="wake-time-input" tuiInputTime [formControlName]="WaketimeField.WakeTime" />
+    <input
+      id="wake-time-input"
+      tuiInputTime
+      [formControlName]="WaketimeField.WakeTime"
+    />
   </tui-textfield>
 </div>
