refactor: streamline HTML templates for day and card dialog components
refactor: simplify TypeScript imports and formatting in day component

feat: add header library with basic structure and initial component

chore: configure ESLint and Jest for header library

fix: clean up initial time tracker widget input formatting

refactor: optimize time seconds control component for better readability

refactor: enhance todos settings widget component for cleaner code

refactor: improve waketime widget component structure and formatting

fix: update widget name registry for consistency

chore: update tsconfig.base.json to include header library

--- a/apps/front/src/app/auth/login/login.component.html
+++ b/apps/front/src/app/auth/login/login.component.html
@@ -12,10 +12,7 @@
         type="email"
       />
     </tui-textfield>
-    <tui-error
-      [formControlName]="LoginField.Email"
-      [error]="[] | tuiFieldError | async"
-    />
+    <tui-error [formControlName]="LoginField.Email" [error]="[] | tuiFieldError | async" />
   </div>
 
   <div>
@@ -31,10 +28,7 @@
         type="password"
       />
     </tui-textfield>
-    <tui-error
-      [formControlName]="LoginField.Password"
-      [error]="[] | tuiFieldError | async"
-    />
+    <tui-error [formControlName]="LoginField.Password" [error]="[] | tuiFieldError | async" />
   </div>
 
   <button
