--- a/apps/front/src/app/auth/sign-up/sign-up.component.html
+++ b/apps/front/src/app/auth/sign-up/sign-up.component.html
@@ -20,10 +20,7 @@
         type="email"
       />
     </tui-textfield>
-    <tui-error
-      [formControlName]="SignUpField.Email"
-      [error]="[] | tuiFieldError | async"
-    />
+    <tui-error [formControlName]="SignUpField.Email" [error]="[] | tuiFieldError | async" />
   </div>
 
   <div>
@@ -40,10 +37,7 @@
         autocomplete="new-password"
       />
     </tui-textfield>
-    <tui-error
-      [formControlName]="SignUpField.Password"
-      [error]="[] | tuiFieldError | async"
-    />
+    <tui-error [formControlName]="SignUpField.Password" [error]="[] | tuiFieldError | async" />
   </div>
 
   <div>
