--- a/apps/front/src/app/settings/widget-layout-settings/widget-layout-settings.component.html
+++ b/apps/front/src/app/settings/widget-layout-settings/widget-layout-settings.component.html
@@ -2,8 +2,8 @@
   <hgroup tuiTitle>
     <h1>Widget Layout Settings</h1>
     <p tuiSubtitle>
-      Configure the layout of your widgets on the dashboard. You can select
-      which widgets to display and their order.
+      Configure the layout of your widgets on the dashboard. You can select which widgets to display
+      and their order.
     </p>
   </hgroup>
 </header>
@@ -16,11 +16,7 @@
       <label tuiLabel>
         {{ title }}
 
-        <tui-textfield
-          tuiChevron
-          [stringify]="stringify"
-          [tuiTextfieldCleaner]="true"
-        >
+        <tui-textfield tuiChevron [stringify]="stringify" [tuiTextfieldCleaner]="true">
           <input
             tuiSelect
             [ngModel]="item.value"
@@ -39,13 +35,7 @@
   }
 </div>
 
-<button
-  size="l"
-  tuiButton
-  type="button"
-  (click)="save()"
-  [loading]="$shouldShowLoading()"
->
+<button size="l" tuiButton type="button" (click)="save()" [loading]="$shouldShowLoading()">
   Save settings
 </button>
 
