--- a/libs/front/ui/calendar/src/lib/day/day-slot/day-slot.component.html
+++ b/libs/front/ui/calendar/src/lib/day/day-slot/day-slot.component.html
@@ -1,8 +1,5 @@
 @let component = $widget()?.component;
 
 @if (component) {
-  <lib-dynamic-host
-    [component]="component"
-    [injector]="$widgetInjector()"
-  ></lib-dynamic-host>
+  <lib-dynamic-host [component]="component" [injector]="$widgetInjector()"></lib-dynamic-host>
 }
