feat(header): update header module and integrate into app layout
- Renamed header import in tsconfig.base.json to use scoped package name.
- Created AppLayoutComponent to include the HeaderComponent and router outlet.
- Added HeaderLink interface and HEADER_LINKS constant to manage header navigation links.

--- a/apps/front/src/app/auth/auth.component.html
+++ b/apps/front/src/app/auth/auth.component.html
@@ -5,7 +5,7 @@
 
 @switch ($formMode()) {
   @case (AuthState.Login) {
-    <app-login [state]="state()" (userLoggedIn)="login($event)" />
+    <app-login [formError]="formError()" [state]="state()" (userLoggedIn)="login($event)" />
   }
   @case (AuthState.SignUp) {
     <app-sign-up [state]="state()" (userSignedUp)="signUp($event)" />
