--- a/libs/front/ui/header/src/lib/header/header.component.less
+++ b/libs/front/ui/header/src/lib/header/header.component.less
@@ -1,3 +1,22 @@
 :host {
-  display: block;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 1rem;
+  border-bottom: 1px solid #ccc;
+}
+
+.icon {
+  inline-size: 1rem;
+  block-size: 1rem;
+
+  color: var(--lifestyle-color-hover);
+}
+
+.logo {
+  font-weight: 700;
+}
+
+.profile {
+  border-radius: 100%;
 }
