--- a/apps/front/src/styles.less
+++ b/apps/front/src/styles.less
@@ -5,4 +5,5 @@
   --lifestyle-color-hover: var(--tui-chart-categorical-16);
   --tui-background-accent-1: var(--lifestyle-color);
   --tui-background-accent-1-hover: var(--lifestyle-color-hover);
+  --tui-text-action: var(--lifestyle-color-hover);
 }
