--- a/libs/front/ui/calendar/src/lib/calendar.component.html
+++ b/libs/front/ui/calendar/src/lib/calendar.component.html
@@ -12,7 +12,7 @@
   </div>
 
   <div class="days">
-    @for (day of $daysInMonth(); track day) {
+    @for (day of $daysInMonth(); track $index) {
       <lifestyle-day
         [day]="day"
         [config]="$config()"
