feat(sport-activities): add sport activities widget with settings component and update registry

--- a/libs/front/ui/todos-widget/src/lib/todos-widget/todos-widget.component.html
+++ b/libs/front/ui/todos-widget/src/lib/todos-widget/todos-widget.component.html
@@ -1,11 +1,11 @@
 @let totalCount = $totalCount();
 @let plannedCount = $plannedCount();
-@let totalRange = $totalRange();
+@let additionalRange = $additionalRange();
 
 <div [class]="`container ${$size()}`">
   <span class="count"> {{ totalCount }} / {{ plannedCount }} </span>
   <div class="dots">
-    @for (total of totalRange; track $index) {
+    @for (additional of additionalRange; track $index) {
       <tui-icon class="icon" icon="@tui.dot" [style.color]="$color()" />
     }
   </div>
