--- a/libs/front/ui/day-card-dialog/src/lib/day-card-dialog/day-card-dialog.component.less
+++ b/libs/front/ui/day-card-dialog/src/lib/day-card-dialog/day-card-dialog.component.less
@@ -8,9 +8,18 @@
 
 .widget-container {
   display: flex;
+
   gap: 2rem;
   margin: 0 auto;
-  min-width: 45%;
+  min-width: 99%;
+}
+
+.preview {
+  flex: 1;
+}
+
+.settings {
+  flex: 2;
 }
 
 .button-container {
