--- a/libs/front/ui/sport-activities-widget/src/lib/sport-activities-settings-widget/sport-activities-settings-widget.component.less
+++ b/libs/front/ui/sport-activities-widget/src/lib/sport-activities-settings-widget/sport-activities-settings-widget.component.less
@@ -4,12 +4,24 @@
   gap: 1rem;
 }
 
-.activity-field {
+.activity {
   display: flex;
+  gap: 1rem;
   align-items: center;
-  gap: 0.5rem;
 }
 
-.input {
-  width: 16rem;
+.activity-container {
+  display: flex;
+  flex-direction: column;
+  flex: 1;
+  gap: 1rem;
+}
+
+.fields-container {
+  display: flex;
+  gap: 1rem;
+}
+
+.field {
+  flex: 1;
 }
