--- a/libs/front/ui/sport-activities-widget/src/lib/sport-activities-widget.component.less
+++ b/libs/front/ui/sport-activities-widget/src/lib/sport-activities-widget.component.less
@@ -1,3 +1,21 @@
 :host {
-  display: block;
+  display: flex;
+  flex-direction: column;
+  gap: 0.5rem;
+}
+
+.activity {
+  display: flex;
+  gap: 0.5rem;
+  align-items: center;
+  font-size: 0.5rem;
+}
+
+.icon {
+  background-color: transparent;
+}
+
+.xl {
+  font-size: 1rem;
+  font-weight: bold;
 }
