--- a/libs/front/ui/calendar/src/lib/day/day.component.less
+++ b/libs/front/ui/calendar/src/lib/day/day.component.less
@@ -88,3 +88,10 @@
   grid-column: 2/2;
   grid-row: 3/3;
 }
+
+.bottom-right {
+  grid-column: 3/3;
+  grid-row: 3/3;
+  align-items: flex-end;
+  justify-content: flex-end;
+}
